--- a/style.css
+++ b/style.css
@@ -628,7 +628,8 @@ margin-top: -11vw;
 .description_arrow_left{
     margin-left: 0vw;
   margin-top: 58vw;
-}
+}.see_number {
+  width: 28vw;}
     
   
 }
