--- a/style.css
+++ b/style.css
@@ -631,7 +631,7 @@ margin-top: -11vw;
 }.see_number {
   width: 28vw;}
 
-    .carousel-control-next{
+    .custom_right{
 margin-top: 23vw!important;
         
     }
