--- a/style.css
+++ b/style.css
@@ -601,13 +601,13 @@ color: black;
     flex-direction: column; /* Stack items vertically */
     height: auto; /* Allow the product div to adjust its height based on content */
 }
-.carousel-control-prev {
+/* .carousel-control-prev {
     
     margin-top: 23vw;
 }
     .carousel-control-next{
         margin-top: 22vw;
-    }
+    } */
 .gallery_wrap {
    
     width: 99vw;
